# template

./: Cargo.toml  README.md
.cargo/: config.toml
src/: boot.rs  main.rs
