[package]
name = "Template"
version = "0.0.0"
edition = "2024"
authors = []

[features]
bootloader = []

[dependencies]
kudos = { git = "https://github.com/kudos-team/kernel.git", branch = "main" }
bootloader = { version = "0.9", features = ["map_physical_memory"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

